--- a/index.html
+++ b/index.html
@@ -24,25 +24,22 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
-
-
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
         <div class="input-group col-md-3 mb-2 mb-md-0">
-          <input class="form-control" id="duration" placeholder="slider change duration">
+          <input class="form-control" id="duration" placeholder="slider change duration"
+            onclick="alert('for 1s duration input 1000ms')">
         </div>
         <button id="create-slider" class="btn btn-primary px-5" onclick="alert('are you sure that ok?')">Create
           slider</button>
       </div>
       <div class="row gallery">
-
       </div>
     </section>
     <!-- slider -->
     <div class="main">
       <section class="mt-5" id="sliders">
-
       </section>
       <div class="dots d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
         <span class="dot" onclick="changeItem(-1)"></span>
